# trait-variant-sample

./: Cargo.toml  LICENSE  Makefile  README.md
src/: infra.rs
src/infra/: cache_key.rs  cache_value.rs  connection.rs  query.rs  schema.rs
